--- a/client/src/style/user/home/header.css
+++ b/client/src/style/user/home/header.css
@@ -1,7 +1,4 @@
-body {
-    overflow: hidden;
-    overflow-x: hidden !important;
-}
+
 
 .header {
     display: flex;
